<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imagenUsuario"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:maxHeight="80dp"
        android:maxWidth="80dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/user_logo" />

    <TextView
        android:id="@+id/txvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/menu_nombre"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/txvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_correo" />
</LinearLayout>